module03/myapp-deploy/myappspa-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myappspa
  labels:
    app: myappspa
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
    - host: YOURINGRESSIP.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myappspa
                port:
                  number: 8080
