module03/myapp-deploy/myapptodo-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapptodo
  labels:
    app: myapptodo
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: "/api/todo"
spec:
  rules:
    - host: YOURINGRESSIP.nip.io
      http:
        paths:
          - path: /api/todo
            pathType: Prefix
            backend:
              service:
                name: myapptodo
                port:
                  number: 8080
